--- a/pickabook/main/templates/main/footer.html
+++ b/pickabook/main/templates/main/footer.html
@@ -4,5 +4,8 @@
 
 
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+{% for script in scripts %}
+    <script src="{% static 'main/'|add:script|add:'.js' %}"></script>
+{% endfor %}
 </body>
