--- a/pickabook/main/templates/main/main_page.html
+++ b/pickabook/main/templates/main/main_page.html
@@ -1,5 +1,24 @@
 {% load static %}
 {% include "main/header.html" %}
+{% if user.is_authenticated %}
+<div class="main-block-top">
+        <div class="main-block-top-title">
+            <a href="#">Personal</a>
+        </div>
+    {% if can_recommend %}
+        <div class="main-block-top-books">
+        {% for book in personal %}
+            <div class="main-top-book">
+                <a href="{% url 'book_url' book_id=book.id %}"><img src='/static/{{ book.cover }}' width="70" height="100"> </a>
+                <figcaption>{{ book.title }} </figcaption>
+            </div>
+        {% endfor %}
+        </div>
+    {% else %}
+        error
+    {% endif %}
+    </div>
+{% endif %}
 
 {% for top in tops %}
 
@@ -10,7 +29,7 @@
         <div class="main-block-top-books">
         {% for book in top.books %}
             <div class="main-top-book">
-                <a href="{% url 'book_url' book_id=book.id %}"><img src='{{ book.cover }}' width="70" height="100"> </a>
+                <a href="{% url 'book_url' book_id=book.id %}"><img src='/static/{{ book.cover }}' width="70" height="100"> </a>
                 <figcaption>{{ book.title }} </figcaption>
             </div>
         {% endfor %}
