--- a/pickabook/main/static/main/css/style.css
+++ b/pickabook/main/static/main/css/style.css
@@ -149,7 +149,11 @@ a {
     width: 130px;
     height: 120px;
 }
-
+.main-top-book figcaption{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .main-block-top {
     width: 100%;
     height: auto;
@@ -181,6 +185,9 @@ a {
     text-decoration: none;
     line-height: 60px;
     outline-width: 400px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .main-block-top-title a {
@@ -188,7 +195,7 @@ a {
     outline: none;
     color: white;
     text-align: center;
-    margin-left: 60px;
+    margin-left: 20px;
 }
 
 .main:before,
@@ -243,7 +250,7 @@ a {
     height: 130px;
     width: 110px;
     margin-left: 10px;
-    padding-top: 15;
+    padding-top: 15px;
     float: left;
 }
 .top-book-author{
@@ -260,7 +267,7 @@ a {
 }
 .top-book-rating{
     padding-top:5px;
-    font-size: 15x;
+    font-size: 15px;
     float: right;
     margin-right: 40px;
 }
@@ -268,7 +275,7 @@ a {
     text-decoration: none;
     color: white;
     margin-right: 20px;
-    padding-top: 15;
+    padding-top: 15px;
 }
 .top-book-title a{
     text-decoration: none;
@@ -308,60 +315,330 @@ a {
     cursor: pointer;
 }
 
-.book-page-block {
-    width: 100%;
-    height: 270px;
-    margin-top: 250px;
-    text-decoration: none;
-    margin-left: 40px;
-}
-.book-block {
-     width: 800px;
-     height: 270px;
-     background: transparent url("../images/top-title.png");
-}
-.book-page-rating {
-     width: 150px;
-     background: transparent url("../images/top-title.png");
-     height: 30px;
-     line-height: 30px;
-     color: white;
-     font-size: 16px;
-     text-align: center;
 
-}
-
-.book-name-block {
-    width: auto;
-    background: transparent url("../images/top-title.png");
-    height: 60px;
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    position: absolute;
-    top: 45%;
-    left: 20%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    line-height: 60px;
-}
-
-.book-author-block {
-    width: auto;
-    background: transparent url("../images/top-title.png");
-    height: 30px;
+.book-page-main-block{
     font-size: 16px;
     color: white;
-    text-decoration: none;
-    text-align: center;
-    position: absolute;
-    top: 55%;
-    left: 15%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    line-height: 30px;
-}
-  .book-page-cover {
+    margin-left: 60px;
 
-  }
+}
+.book-name-block {
+    background: transparent url("../images/top-title.png");
+    font-size: 25px;
+    width: 400px;
+    height: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-left: 5px;
+    margin-top: 30px;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 5px 5px 0px 0px;
+    border: 1px solid #dcdcdc;
+}
+.book-author-block {
+    background: transparent url("../images/top-title.png");
+    font-size: 16px;
+    width: 400px;
+    height: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: 1px solid #dcdcdc;
+    line-height: 50px;
+    border-radius: 0px 0px 5px 5px;
+    padding-left: 5px;
+}
+.book-page-rating {
+    background: transparent url("../images/top-title.png");
+    font-size: 20px;
+    width: 110px;
+    height: 50px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    border: 1px solid #dcdcdc;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 5px 5px 5px 5px;
+
+}
+.book-page-block {
+    display: inline-flex;
+}
+.book-page-cover {
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+}
+.book-page-description {
+    background: transparent url("../images/top-title.png");
+    width: 700px;
+    height: 200px;
+    margin-top: 35px;
+    margin-left: 80px;
+    border-radius: 5px 5px 5px 5px;
+
+}
+.description-item {
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+    background: transparent url("../images/header.png");
+    width: 150px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 5px 5px 5px 5px;
+
+}
+.description-top-item {
+    background: transparent url("../images/header.png");
+    width: 300px;
+    height: 120px;
+    bottom: 175px;
+    position: relative;
+    left: 300px;
+    line-height: 120px;
+    text-align: center;
+    border-radius: 5px 5px 5px 5px;
+    overflow-y: scroll;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+}
+.description-top-item a{
+    border: 1px;
+}
+.book-description {
+    background: transparent url("../images/top-title.png");
+    border-radius: 5px 5px 5px 5px;
+    width: 700px;
+    height: auto;
+    min-height: 200px;
+    margin-top: 20px;
+    margin-left: 270px;
+    margin-bottom: 20px;
+    padding: 15px;
+    font-size: 14px;
+
+}
+.book-review-block {
+    background-color: #00767e;
+    border-radius: 5px 5px 5px 5px;
+    width: 100%;
+    height: auto;
+    min-height: 200px;
+    margin-top: 20px;
+    margin-right: 60px;
+    margin-bottom: 20px;
+    padding: 15px;
+    font-size: 20px;
+}
+
+.login-form{
+    background: transparent url("../images/top-title.png");
+    width: 500px;
+    height: auto;
+    margin: auto;
+    margin-top: 100px;
+    font-size: 16px;
+    color: white;
+    border-radius: 10px;
+    text-align: center;
+
+}
+
+.login-form a {
+    text-decoration: none;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+
+    margin-top: 20px;
+
+}
+.login-form-title a{
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+    margin-top: 20px;
+    padding-top: 15px;
+
+}
+.login-form-title {
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+}
+.login-form-block > a:nth-child(6) {
+ margin-right: 70px;
+ font-size: 12px;
+}
+
+.login-form-block {
+    padding-bottom: 15px;
+}
+
+login-from-block a{
+    margin: auto;
+    text-align: center;
+    width: auto;
+    height: auto;
+    text-decoration: none;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+}
+#id_username {
+
+
+    border: 1px solid #dcdcdc; /* рамка */
+    padding: 12px 10px; /* отступы текста */
+    border-radius: 5px 5px 5px 5px; /* закругленные углы сверху */
+}
+#id_password {
+    border: 1px solid #dcdcdc; /* рамка */
+    padding: 12px 10px; /* отступы текста */
+    border-radius: 5px 5px 5px 5px; /* закругленные углы снизу */
+}
+.authorization-submit {
+    margin-left: 280px;
+    background-color: #00767e;
+    margin-top: 10px;
+    border-radius: 5px 5px 5px 5px;
+    font-size: 15px;
+}
+
+.reg-form{
+    background: transparent url("../images/top-title.png");
+    width: 500px;
+    height: auto;
+    margin: auto;
+    margin-top: 100px;
+    font-size: 16px;
+    color: white;
+    border-radius: 10px;
+    text-align: center;
+
+}
+.reg-form-title a{
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+
+    padding-top: 15px;
+
+}
+.reg-form-title {
+    padding-top: 15px;
+}
+.reg-from-block{
+    text-align: center;
+    margin-top: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+#id_email {
+
+    border: 1px solid #dcdcdc; /* рамка */
+    padding: 12px 10px; /* отступы текста */
+    border-radius: 5px 5px 5px 5px;
+
+}
+
+#id_password1 {
+
+    border: 1px solid #dcdcdc; /* рамка */
+    padding: 12px 10px; /* отступы текста */
+    border-radius: 5px 5px 5px 5px;
+}
+
+#id_password2 {
+
+    border: 1px solid #dcdcdc; /* рамка */
+    padding: 12px 10px; /* отступы текста */
+    border-radius: 5px 5px 5px 5px;
+
+}
+
+.profile_information-block{
+     display: inline-flex;
+
+
+}
+.information {
+    margin-top: 80px;
+    margin-left: 300px;
+    background: transparent url("../images/top-title.png");
+    width: 800px;
+    height: 200px;
+    color: white;
+    text-align: center;
+    border-radius: 5px 5px 5px 5px;
+
+}
+.information-item {
+    margin-top: 20px;
+    margin-left: 200px;
+    background: transparent url("../images/header.png");
+    width: 150px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 5px 5px 5px 5px;
+    position: relative;
+    font-size: 16px;
+
+}
+.user-statistics {
+    margin-right: 100px;
+    background-color: white;
+    text-align: center;
+    border-radius: 5px 5px 5px 5px;
+    position: relative;
+    margin-top: -140px;
+    width: 300px;
+    height: 150px;
+    color: #565656;
+    font-size: 16px;
+    line-height: 60px;
+    margin-left: 420px;
+
+}
+
+.preferences-block {
+    border-radius: 5px 5px 5px 5px;
+    background-color: #00767e;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
+    width: 600px;
+    height: 300px;
+    overflow-y: auto;
+    font-size: 16px;
+    color: white;
+
+
+}
+.tag{
+    height: 30px;
+    text-align: center;
+    border: 0.5px solid #dcdcdc;
+
+}
+
+.preferences-button {
+    margin-left: 675px;
+    margin-bottom: 30px;
+}
+.preferences-title {
+    margin-top: 30px;
+    color: #565656;
+    font-size: 20px;
+    text-align: center;
+}
