--- a/pickabook/main/templates/main/book_page.html
+++ b/pickabook/main/templates/main/book_page.html
@@ -1,27 +1,53 @@
 {% load static %}
 {% include "main/header.html" %}
 
-<div class="book-name-block">
+<div class="book-page-main-block">
+    <div class="book-name-block">
 
-    <div class="book-name">
-        <a>{{ book.title }}</a>
+        <div class="book-name">
+            <a>{{ book.title }}</a>
+        </div>
+
+    </div>
+    <div class="book-author-block">
+        <a>{{ book.author }}</a>
     </div>
 
-</div>
-<div class="book-author-block">
-    <a>{{ book.author}}</a>
-</div>
+    <div class="book-page-block">
+        <div class="book-page-cover">
+            <a href="{% url 'book_url' book_id=book.id %}"><img src='{{ book.cover }}' width="190" height="240"> </a>
+        </div>
 
-<div class="book-page-block">
-    <div class="book-page-cover">
-                <a href="{% url 'book_url' book_id=book.id %}"><img src='{{ book.cover }}' width="190" height="240"> </a>
+        <div class="book-page-description">
+            {% if is_finished %}
+                <div class="description-item"><a>Прочитана</a></div>
+            {% else %}
+                <div class="description-item"><a>Не прочитана</a></div>
+            {% endif %}
+            <div class="description-item"><a>В избранное</a></div>
+            <div class="description-item"><a>Хочу прочитать</a></div>
+            <div class="description-top-item">
+            {% for top in top_list %}
+                <a>{{ top.title }}</a>
+            {% endfor %}
+            </div>
+
+        </div>
+
     </div>
 
     <div class="book-page-rating">
-        <a>Рейтинг: {{ book.rating }}</a></div>
+        <a>Рейтинг: {{ book.rating }}</a>
     </div>
-   <div class="">
 
-   </div>
+    <div class="book-description">
+        <a>{{ book.description }}</a>
+    </div>
+
+    <div class="book-review-block">
+        <a> Отзывы пользователей:</a>
+
+    </div>
 
 </div>
+{% include "main/footer.html" %}
