--- a/pickabook/main/templates/main/main_page.html
+++ b/pickabook/main/templates/main/main_page.html
@@ -4,16 +4,35 @@
 {% for top in tops %}
 
     <div class="main-block-top">
+
         <div class="main-block-top-title">
             <a href="{% url 'top_url' top_id=top.id %}">  {{ top.title }} </a>
         </div>
+
         <div class="main-block-top-books">
-        {% for book in top.books %}
-            <div class="main-top-book">
-                <a href="{% url 'book_url' book_id=book.id %}"><img src='{{ book.cover }}' width="70" height="100"> </a>
-                <figcaption>{{ book.title }} </figcaption>
-            </div>
-        {% endfor %}
+{#            {% if user.is_authenticated %}#}
+{##}
+{#                {% for book in personal %}#}
+{#                    <a href="{% url 'book_url' book_id=book.id %}"><img src='{{ book.cover }}' width="70" height="100">#}
+{#                    </a>#}
+{#                    <figcaption>{{ book.title }} </figcaption>#}
+{#                {% endfor %}#}
+{##}
+{#            {% else %}#}
+{##}
+{#                <div class="main-top-book">#}
+{#                    Авторизируйтесь для подборки персональных рекомендаций#}
+{#                </div>#}
+{##}
+{#            {% endif %}#}
+
+            {% for book in top.books %}
+                <div class="main-top-book">
+                    <a href="{% url 'book_url' book_id=book.id %}"><img src='{{ book.cover }}' width="70" height="100">
+                    </a>
+                    <figcaption>{{ book.title }} </figcaption>
+                </div>
+            {% endfor %}
         </div>
     </div>
 
