--- a/pickabook/main/templates/main/profile_page.html
+++ b/pickabook/main/templates/main/profile_page.html
@@ -4,8 +4,8 @@
 <div class="profile_information-block">
     <div class="information">
 
-        <div class="information-item"><a>Логин</a></div>
-        <div class="information-item"><a>E-mail</a></div>
+        <div class="information-item">{{ user.username }}</div>
+        <div class="information-item">{{ user.email }}</div>
         <div class="information-item"><a>Cменить пароль</a></div>
 
         <div class="user-statistics">
