--- a/pickabook/main/templates/main/header.html
+++ b/pickabook/main/templates/main/header.html
@@ -10,7 +10,7 @@
     </div>
     {% if user.is_authenticated %}
         <div class="block-top-username">
-            <p><a href="{% url 'profile' %}">Личный кабинет</a></p>
+            <p><a href="{% url 'profile_url' %}">Личный кабинет</a></p>
             <a href="{% url 'logout' %}">Выйти</a>
         </div>
     {% else %}
