changed tops at main page

--- a/pickabook/main/templates/main/main_page.html
+++ b/pickabook/main/templates/main/main_page.html
@@ -16,12 +16,12 @@
         {% endfor %}
         </div>
     {% else %}
-        error
+        Выберите предпочтения в профиле для получения персональных рекоммендаций
     {% endif %}
-    </div>
+</div>
  {% else %}
     <div class="main-top-book">
-                <a> Авторизируйтесь для подборки персональных рекомендаций</a>
+                <a> Авторизируйтесь для получения персональных рекомендаций</a>
     </div>
 
 {% endif %}
